Changelog
=========

In next release...

* Fixed issue where you could not choose the standard layout if a
  missing layout was already selected (this might occur if an add-on
  product had been removed).

* Synched ``i18n/collage-xx.po`` files (10 messages added, 5 removed)
  [glenfant]

* Added a GS upgrade step to 1.3.0
  [glenfant]

1.3.0-b1 (2010-01-09)
---------------------

* Adjusted the row renderer's use of template arguments for compatibility
  with Zope 2.12.
  [davisagli]

* Aliases are now inserted using an ajax-driven reference browser
  (custom implementation) which operates similarly to the standard
  Plone reference browser widget.
  [malthe]

* Fail gracefully (and informatively) when a layout cannot render.
  [malthe]

* Move the "split column" action to the row.
  [malthe]

* Cleaned up layout stylesheet.
  [malthe]

* Fixed issue that prevented inline-editing from working properly.
  [malthe]

* Changes to user interface appearance.
  [malthe]

* Added form protection.
  [malthe]

* Rewired compose view to simplify templates and avoid needless
  indirection.
  [malthe]

* Rename 'Manage page' to 'Compose'.
  [malthe]

* Move settings fields to the settings schemata. Added field descriptions.
  [malthe]

1.2.3 (2009-11-02)
------------------

* Fixed search bug mentioned in #57 when adding alias.
  [glenfant]

* Worked around IE CSS bugs mentioned in issue #60. Thanks to Kevin Deldycke.
  [glenfant]

* Synched all .po with the latest labels and updated the ``*-fr.po``
  files. Collage translators, new .po files are wawiting for your inputs.
  [glenfant]

* Following jensens change on types whitelist, change the test accordingly.
  [glenfant]

* On alias target removal, the alias layout is reset to "standard". This gives a
  chance to content authors to delete the alias, rather tha saying "Error:
  Layout not found". This fixes #63
  [glenfant]

* Update JavaScript to no longer use reserved function postMessage. This fixes
  #54.
  [dunlapm]
